<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".fragments.CreditsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <TextView
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_association"/>

        <TextView
            android:layout_marginStart="10dp"
            android:text="@string/developer_name"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/credits_disclaimer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/links_and_resources"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginVertical="15dp"/>

    <TextView
        android:id="@+id/textfaces_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/textfaces_link"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lennyfaces_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lennyfaces_link"
        android:textSize="25sp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/twitch_quotes_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitch_quotes_link"
        android:textSize="25sp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/asky_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asky_link"
        android:textSize="25sp"
        android:layout_margin="5dp"/>

</LinearLayout>